2008-07-18  Sebastien Pouliot  <sebastien@ximian.com>

	* rules.xml: Add Maintainability rules to "default"

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add common.make to the dist

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* common.make: Cut down on Makefile.am copy/paste (and hopefully 
	the errors inside them ;-)

2008-04-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* rules.mds, tests.mds: added new projects for
	Gendarme.Rules.Maintainability.

2008-04-27  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.xml: Add Maintainability rules to "self-test" and a new
	"maintainability" ruleset.

2008-04-27  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Appended the Maintainability build.

2008-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Re-order directories to start with Test.Rules

2008-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Test.Rules to the build.
	* tests.mds: Add Test.Rules to MD testing solution.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Gendarme.Rules.Serialization to the build.
	* rules.xml: Add Serialization rules to "default", "self-test" and 
	a new "serialization" ruleset.
	* rules.mds: Add Serialization rules project to the solution.
	* tests.mds: Add Serialization unit tests project to the solution.

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* rules.xml: Order rules alphabetically. Update mono-bcl rule set 
	with newer rules.

2008-01-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* rules.xml: In default only exclude NullDerefRule from Correctness
	and stop excluding ToStringReturnsNullRule from BadPractice. In 
	mono-bcl include everything except MethodCanBeMadeStaticRule and 
	NullDerefRule from Correctness and exclude MonoCompatibilityReviewRule
	from Portability.

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* rules.mds, tests.mds: Add Gendarme.Rules.Interoperability to